<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile">

    <ImageView
        android:id="@+id/image"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/profmage"

        />

    <TextView
        android:id="@+id/user"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="70dp"
        android:layout_below="@id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/User"
        android:textStyle="italic"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        android:fontFamily="sans-serif-light"/>

    <TextView
        android:id="@+id/track"

        android:layout_marginTop="11dp"
        android:layout_marginLeft="60dp"
        android:textColor="@color/colorText"
        android:layout_below="@id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Track"
        android:textSize="25sp"
        android:fontFamily="serif"/>
    <TextView
        android:id="@+id/country"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="11dp"
        android:textColor="@color/colorText"
        android:layout_below="@id/track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Country"
        android:textSize="25sp"
        android:fontFamily="serif"/>
    <TextView
        android:id="@+id/mail"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="11dp"
        android:layout_below="@id/country"
        android:textColor="@color/colorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:fontFamily="serif"
        />
    <TextView
        android:layout_marginTop="11dp"
        android:id="@+id/phone"
        android:layout_marginLeft="60dp"
        android:textColor="@color/colorText"
        android:layout_below="@id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Phone"

        android:textSize="20sp"
        android:fontFamily="serif"/>
    <TextView
        android:id="@+id/slck"
        android:textColor="@color/colorText"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="11dp"
        android:layout_below="@id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slack"
        android:textSize="20sp"
        android:fontFamily="serif"
        />

</RelativeLayout>