<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e4e4e4"
    tools:context=".MainActivity">

    <TextView
        android:textStyle="bold"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        android:fontFamily="serif"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:layout_marginTop="100dp"
        android:layout_marginLeft="140dp"
        android:text="@string/about"
        android:textColor="@color/colorText"
        android:fontFamily="monospace"
        android:onClick="btnAbout"
        android:textSize="15sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="140dp"
        android:text="@string/profile"
        android:fontFamily="monospace"
        android:textSize="15sp"
        android:textColor="@color/colorText"
        android:onClick="btnProfile"/>


</LinearLayout>